// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listStyleType renders 0 1`] = `
Array [
  .c0 {
  list-style-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders function 1`] = `
Array [
  .c0 {
  list-style-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: has;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: has;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders invalid theme path 1`] = `
Array [
  .c0 {
  list-style-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders negative number 1`] = `
Array [
  .c0 {
  list-style-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    list-style-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    list-style-type: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-type: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-type: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-type: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-type: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    list-style-type: July;
  }
}

@media April {
  .c0 {
    list-style-type: August;
  }
}

@media January {
  .c0 {
    list-style-type: September;
  }
}

@media April {
  .c0 {
    list-style-type: November;
  }
}

@media June {
  .c0 {
    list-style-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    list-style-type: July;
  }
}

@media April {
  .c0 {
    list-style-type: August;
  }
}

@media January {
  .c0 {
    list-style-type: September;
  }
}

@media April {
  .c0 {
    list-style-type: November;
  }
}

@media June {
  .c0 {
    list-style-type: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-type: January;
  }
}

@media April {
  .c0 {
    list-style-type: December;
  }
}

@media January {
  .c0 {
    list-style-type: April;
  }
}

@media April {
  .c0 {
    list-style-type: May;
  }
}

@media June {
  .c0 {
    list-style-type: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-type: January;
  }
}

@media April {
  .c0 {
    list-style-type: December;
  }
}

@media January {
  .c0 {
    list-style-type: April;
  }
}

@media April {
  .c0 {
    list-style-type: May;
  }
}

@media June {
  .c0 {
    list-style-type: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders postitive number 1`] = `
Array [
  .c0 {
  list-style-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders string 1`] = `
Array [
  .c0 {
  list-style-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: June;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: June;
}

<div
    className="c0"
  />,
]
`;

exports[`listStyleType renders valid theme path 1`] = `
Array [
  .c0 {
  list-style-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-type: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
